--- a/components/Menu-Nav/menu-nav.module.css
+++ b/components/Menu-Nav/menu-nav.module.css
@@ -1,9 +1,9 @@
 .body {
   padding: 0 1rem;
-  background-color: white;
+  background-color: rgb(187, 187, 187);
   grid-area: head;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   width: 100%;
   height: 100px;
   display: flex;
@@ -44,6 +44,7 @@
   padding: 0.5rem;
   margin-right: 1.5rem;
   border-radius: 10px;
+  cursor: pointer;
 }
 .body nav ul li .list {
   display: flex;
