--- a/components/Menu-Nav/menu-nav.module.scss
+++ b/components/Menu-Nav/menu-nav.module.scss
@@ -1,10 +1,10 @@
 .body {
   padding: 0 1rem;
-  background-color: white;
-  // background-color: rgb(187, 187, 187);
+  // background-color: white;
+  background-color: rgb(187, 187, 187);
   grid-area: head;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   width: 100%;
   height: 100px;
   display: flex;
@@ -50,6 +50,7 @@
         padding: 0.5rem;
         margin-right: 1.5rem;
         border-radius: 10px;
+        cursor: pointer;
 
         .list {
           display: flex;
