--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -17,7 +17,7 @@
   // border: 5px solid red;
   width: 100%;
   padding: 5rem;
-  background-image: url("/image/contact01.jpg");
+  background-image: url("/image/contact.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
