--- a/components/Menu-Nav/menu-nav.module.css
+++ b/components/Menu-Nav/menu-nav.module.css
@@ -1,5 +1,4 @@
 .body {
-  padding: 0 1rem;
   background-color: rgb(187, 187, 187);
   grid-area: head;
   position: fixed;
@@ -11,23 +10,34 @@
   align-items: center;
   flex-direction: row;
 }
-.body .title {
-  margin-right: 3rem;
+.body main {
+  height: 100%;
+  width: 75%;
+  padding: 0 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
+}
+.body main .title {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.body .title h4 {
+.body main .title h4 {
   margin: 0;
-  font-size: 0.9rem;
 }
-.body .title h1 {
+.body main .title h1 {
   margin: 0;
-  font-size: 1.5rem;
 }
-.body nav ul {
-  padding: 0.5rem;
+.body main nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.body main nav ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -36,113 +46,132 @@
   align-items: center;
   flex-direction: row;
 }
-.body nav ul li:nth-child(3) {
+.body main nav ul li:nth-child(3) {
   margin-right: 0;
 }
-.body nav ul li {
+.body main nav ul li {
+  width: 140px;
   box-shadow: 1px 3px 5px gray;
   padding: 0.5rem;
-  margin-right: 1.5rem;
+  margin-right: 2rem;
   border-radius: 10px;
   cursor: pointer;
 }
-.body nav ul li .list {
+.body main nav ul li .list {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.body nav ul li .list h4 {
+.body main nav ul li .list h4 {
   margin: 0;
   font-size: 0.9rem;
 }
-.body nav ul li .list h1 {
+.body main nav ul li .list h1 {
   margin: 0;
   font-size: 1.3rem;
 }
-.body nav ul li:hover {
+.body main nav ul li:hover {
   transition: 300ms;
   color: white;
   background-color: orange;
 }
 
-@media screen and (max-width: 900px) {
-  .body .title {
-    margin-right: 3rem;
+@media screen and (max-width: 1000px) {
+  .body main {
+    width: 100%;
   }
-  .body .title h4 {
-    margin: 0;
+  .body main .title h4 {
     font-size: 0.8rem;
   }
-  .body .title h1 {
-    margin: 0;
-    font-size: 1.4rem;
+  .body main .title h1 {
+    font-size: 1.8rem;
   }
-  .body nav ul li .list h4 {
-    margin: 0;
+  .body main nav ul li .list h4 {
     font-size: 0.8rem;
   }
-  .body nav ul li .list h1 {
-    margin: 0;
+  .body main nav ul li .list h1 {
     font-size: 1.2rem;
   }
 }
-@media screen and (max-width: 650px) {
-  .body .title {
-    margin-right: 2.5rem;
+@media screen and (max-width: 768px) {
+  .body main .title h4 {
+    font-size: 0.7rem;
   }
-  .body .title h4 {
-    margin: 0;
+  .body main .title h1 {
+    font-size: 1.7rem;
+  }
+  .body main nav ul li {
+    width: 110px;
+  }
+  .body main nav ul li .list h4 {
+    font-size: 0.7rem;
+  }
+  .body main nav ul li .list h1 {
+    font-size: 1.1rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .body main {
+    padding: 0 0.5rem;
+  }
+  .body main .title h4 {
     font-size: 0.6rem;
   }
-  .body .title h1 {
-    margin: 0;
-    font-size: 1.2rem;
+  .body main .title h1 {
+    font-size: 1.3rem;
   }
-  .body nav ul li .list h4 {
-    margin: 0;
-    font-size: 0.6rem;
+  .body main nav ul li {
+    width: 100px;
+    margin-right: 1.2rem;
+    padding: 0.3rem;
   }
-  .body nav ul li .list h1 {
-    margin: 0;
+  .body main nav ul li .list h4 {
+    font-size: 0.7rem;
+  }
+  .body main nav ul li .list h1 {
     font-size: 1rem;
   }
 }
 @media screen and (max-width: 480px) {
   .body {
     height: 130px;
+  }
+  .body main {
+    padding: 0;
     flex-direction: column;
+    justify-content: center;
   }
-  .body .title {
-    margin-right: 0;
-    margin-bottom: 1rem;
-    flex-direction: row;
+  .body main .title {
+    margin-bottom: 0.8rem;
   }
-  .body .title h4 {
-    margin: 0;
-    margin-right: 1rem;
-    font-size: 1rem;
-  }
-  .body .title h1 {
-    margin: 0;
-    font-size: 1rem;
-  }
-  .body nav ul li .list h4 {
-    margin: 0;
+  .body main .title h4 {
     font-size: 0.6rem;
   }
-  .body nav ul li .list h1 {
-    margin: 0;
+  .body main .title h1 {
+    font-size: 1.3rem;
+  }
+  .body main nav ul li {
+    width: 100px;
+    margin-right: 1.2rem;
+    padding: 0.3rem;
+  }
+  .body main nav ul li .list h4 {
+    font-size: 0.7rem;
+  }
+  .body main nav ul li .list h1 {
     font-size: 1rem;
   }
 }
-@media screen and (max-width: 390px) {
-  .body nav ul li .list h4 {
-    margin: 0;
-    font-size: 0.5rem;
+@media screen and (max-width: 320px) {
+  .body main nav ul li {
+    width: 90px;
+    margin-right: 0.8rem;
   }
-  .body nav ul li .list h1 {
-    margin: 0;
+  .body main nav ul li .list h4 {
+    font-size: 0.6rem;
+  }
+  .body main nav ul li .list h1 {
     font-size: 0.9rem;
   }
 }
