--- a/components/Menu-Nav/menu-nav.module.scss
+++ b/components/Menu-Nav/menu-nav.module.scss
@@ -1,111 +1,81 @@
+@mixin center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .body {
-  padding: 0 1rem;
-  // background-color: white;
   background-color: rgb(187, 187, 187);
   grid-area: head;
   position: fixed;
   z-index: 5;
   width: 100%;
   height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include center;
   flex-direction: row;
 
-  .title {
-    margin-right: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  main {
+    height: 100%;
+    width: 75%;
+    padding: 0 1rem;
+    @include center;
+    justify-content: space-around;
 
-    h4 {
-      margin: 0;
-      font-size: 0.9rem;
+    .title {
+      @include center;
+
+      flex-direction: column;
+
+      h4 {
+        margin: 0;
+      }
+
+      h1 {
+        margin: 0;
+      }
     }
 
-    h1 {
-      margin: 0;
-      font-size: 1.5rem;
-    }
-  }
-
-  nav {
-    ul {
-      padding: 0.5rem;
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    nav {
+      @include center;
       flex-direction: row;
 
-      li:nth-child(3) {
-        margin-right: 0;
-      }
-
-      li {
-        box-shadow: 1px 3px 5px gray;
-        padding: 0.5rem;
-        margin-right: 1.5rem;
-        border-radius: 10px;
-        cursor: pointer;
-
-        .list {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-
-          h4 {
-            margin: 0;
-            font-size: 0.9rem;
-          }
-          h1 {
-            margin: 0;
-            font-size: 1.3rem;
-          }
-        }
-
-        &:hover {
-          transition: 300ms;
-          color: white;
-          background-color: orange;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .body {
-    .title {
-      margin-right: 3rem;
-
-      h4 {
-        margin: 0;
-        font-size: 0.8rem;
-      }
-
-      h1 {
-        margin: 0;
-        font-size: 1.4rem;
-      }
-    }
-
-    nav {
       ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        @include center;
+        flex-direction: row;
+
+        li:nth-child(3) {
+          margin-right: 0;
+        }
+
         li {
+          width: 140px;
+          box-shadow: 1px 3px 5px gray;
+          padding: 0.5rem;
+          margin-right: 2rem;
+          border-radius: 10px;
+          cursor: pointer;
+
           .list {
+            @include center;
+            flex-direction: column;
+
             h4 {
               margin: 0;
-              font-size: 0.8rem;
+              font-size: 0.9rem;
             }
             h1 {
               margin: 0;
-              font-size: 1.2rem;
+              font-size: 1.3rem;
             }
+          }
+
+          &:hover {
+            transition: 300ms;
+            color: white;
+            background-color: orange;
           }
         }
       }
@@ -113,35 +83,99 @@
   }
 }
 
-// 🔥🔥🔥ここから1列🔥🔥🔥
-
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1000px) {
   .body {
-    .title {
-      margin-right: 2.5rem;
+    main {
+      width: 100%;
+      .title {
+        h4 {
+          font-size: 0.8rem;
+        }
 
-      h4 {
-        margin: 0;
-        font-size: 0.6rem;
+        h1 {
+          font-size: 1.8rem;
+        }
       }
 
-      h1 {
-        margin: 0;
-        font-size: 1.2rem;
+      nav {
+        ul {
+          li {
+            .list {
+              h4 {
+                font-size: 0.8rem;
+              }
+              h1 {
+                font-size: 1.2rem;
+              }
+            }
+          }
+        }
       }
     }
+  }
+}
 
-    nav {
-      ul {
-        li {
-          .list {
-            h4 {
-              margin: 0;
-              font-size: 0.6rem;
+@media screen and (max-width: 768px) {
+  .body {
+    main {
+      .title {
+        h4 {
+          font-size: 0.7rem;
+        }
+
+        h1 {
+          font-size: 1.7rem;
+        }
+      }
+
+      nav {
+        ul {
+          li {
+            width: 110px;
+
+            .list {
+              h4 {
+                font-size: 0.7rem;
+              }
+              h1 {
+                font-size: 1.1rem;
+              }
             }
-            h1 {
-              margin: 0;
-              font-size: 1rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .body {
+    main {
+      padding: 0 0.5rem;
+      .title {
+        h4 {
+          font-size: 0.6rem;
+        }
+
+        h1 {
+          font-size: 1.3rem;
+        }
+      }
+
+      nav {
+        ul {
+          li {
+            width: 100px;
+            margin-right: 1.2rem;
+            padding: 0.3rem;
+
+            .list {
+              h4 {
+                font-size: 0.7rem;
+              }
+              h1 {
+                font-size: 1rem;
+              }
             }
           }
         }
@@ -153,35 +187,36 @@
 @media screen and (max-width: 480px) {
   .body {
     height: 130px;
-    flex-direction: column;
-    .title {
-      margin-right: 0;
-      margin-bottom: 1rem;
-      flex-direction: row;
+    main {
+      padding: 0;
+      flex-direction: column;
+      justify-content: center;
 
-      h4 {
-        margin: 0;
-        margin-right: 1rem;
-        font-size: 1rem;
+      .title {
+        margin-bottom: 0.8rem;
+        h4 {
+          font-size: 0.6rem;
+        }
+
+        h1 {
+          font-size: 1.3rem;
+        }
       }
 
-      h1 {
-        margin: 0;
-        font-size: 1rem;
-      }
-    }
+      nav {
+        ul {
+          li {
+            width: 100px;
+            margin-right: 1.2rem;
+            padding: 0.3rem;
 
-    nav {
-      ul {
-        li {
-          .list {
-            h4 {
-              margin: 0;
-              font-size: 0.6rem;
-            }
-            h1 {
-              margin: 0;
-              font-size: 1rem;
+            .list {
+              h4 {
+                font-size: 0.7rem;
+              }
+              h1 {
+                font-size: 1rem;
+              }
             }
           }
         }
@@ -190,19 +225,22 @@
   }
 }
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 320px) {
   .body {
-    nav {
-      ul {
-        li {
-          .list {
-            h4 {
-              margin: 0;
-              font-size: 0.5rem;
-            }
-            h1 {
-              margin: 0;
-              font-size: 0.9rem;
+    main {
+      nav {
+        ul {
+          li {
+            width: 90px;
+            margin-right: 0.8rem;
+
+            .list {
+              h4 {
+                font-size: 0.6rem;
+              }
+              h1 {
+                font-size: 0.9rem;
+              }
             }
           }
         }
