--- a/components/Menu-Nav/menu-nav.module.css
+++ b/components/Menu-Nav/menu-nav.module.css
@@ -1,5 +1,5 @@
 .body {
-  background-color: rgb(187, 187, 187);
+  background-color: rgb(171, 171, 171);
   grid-area: head;
   position: fixed;
   z-index: 5;
@@ -18,6 +18,7 @@
   justify-content: center;
   align-items: center;
   justify-content: space-around;
+  color: white;
 }
 .body main .title {
   display: flex;
@@ -56,6 +57,8 @@
   margin-right: 2rem;
   border-radius: 10px;
   cursor: pointer;
+  background-color: orange;
+  color: white;
 }
 .body main nav ul li .list {
   display: flex;
@@ -74,7 +77,7 @@
 .body main nav ul li:hover {
   transition: 300ms;
   color: white;
-  background-color: orange;
+  background-color: orangered;
 }
 
 @media screen and (max-width: 1000px) {
