--- a/components/Menu-Nav/menu-nav.module.scss
+++ b/components/Menu-Nav/menu-nav.module.scss
@@ -5,7 +5,10 @@
 }
 
 .body {
-  background-color: rgb(187, 187, 187);
+  background-color: rgb(171, 171, 171);
+  // background-color: rgb(199, 199, 199);
+  // background-color: rgb(146, 140, 140);
+  // background-color: rgb(200, 198, 198);
   grid-area: head;
   position: fixed;
   z-index: 5;
@@ -20,6 +23,7 @@
     padding: 0 1rem;
     @include center;
     justify-content: space-around;
+    color: white;
 
     .title {
       @include center;
@@ -57,6 +61,9 @@
           margin-right: 2rem;
           border-radius: 10px;
           cursor: pointer;
+          background-color: orange;
+          color: white;
+
 
           .list {
             @include center;
@@ -75,7 +82,7 @@
           &:hover {
             transition: 300ms;
             color: white;
-            background-color: orange;
+            background-color: orangered;
           }
         }
       }
