--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -30,6 +30,10 @@
 
   .sentenceSection {
     padding: 5rem;
+    background-color: snow;
+    background-color: ghostwhite;
+    background-color: whitesmoke;
+    background-color: white;
 
     .sentence:nth-child(1) {
       margin-bottom: 5rem;
