--- a/components/Menu-Nav/menu-nav.module.scss
+++ b/components/Menu-Nav/menu-nav.module.scss
@@ -5,7 +5,9 @@
 }
 
 .body {
-  background-color: rgb(171, 171, 171);
+  background-color: whitesmoke;
+  background-color: gainsboro;
+  // background-color: rgb(171, 171, 171);
   // background-color: rgb(199, 199, 199);
   // background-color: rgb(146, 140, 140);
   // background-color: rgb(200, 198, 198);
@@ -23,7 +25,7 @@
     padding: 0 1rem;
     @include center;
     justify-content: space-around;
-    color: white;
+    // color: white;
 
     .title {
       @include center;
@@ -61,13 +63,13 @@
           margin-right: 2rem;
           border-radius: 10px;
           cursor: pointer;
-          background-color: orange;
+          background-color: darkorange;
           color: white;
-
 
           .list {
             @include center;
             flex-direction: column;
+            // user-select: none;
 
             h4 {
               margin: 0;
@@ -82,10 +84,18 @@
           &:hover {
             transition: 300ms;
             color: white;
-            background-color: orangered;
+            background-color: orange;
           }
         }
       }
+    }
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .body {
+    main {
+      width: 65%;
     }
   }
 }
