--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,10 @@
 }
 .body .sentenceSection {
   padding: 5rem;
+  background-color: snow;
+  background-color: ghostwhite;
+  background-color: whitesmoke;
+  background-color: white;
 }
 .body .sentenceSection .sentence:nth-child(1) {
   margin-bottom: 5rem;
