--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -1,5 +1,10 @@
+@mixin center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .body {
-  // border: 5px solid red;
   position: relative;
   top: 130px;
   width: 100%;
@@ -19,130 +24,107 @@
   }
 
   main {
-    // border: 5px solid red;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("/image/all-menu/barrel.jpg");
+
+    &::after {
+      content: "";
+      background-color: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      height: 100%;
+    }
+
     width: 100%;
     min-height: calc(100vh - 260px);
     padding: 3rem;
-    // padding: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include center;
     flex-direction: column;
 
     .box {
+      z-index: 1;
+      background-color: white;
       box-shadow: 5px 5px 10px gray;
-      border: 3px solid red;
-      width: 950px;
-      // width: 70%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: row;
+      border-radius: 10px;
+      padding: 1rem;
+      width: 65%;
+
+      @include center;
 
       .sentence {
-        border: 3px solid blue;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
         width: 70%;
-        padding: 1.5rem;
+
+        @include center;
+        flex-direction: column;
 
         .title {
-          // border: 3px solid red;
+          @include center;
           margin: 0;
-          width: 95%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          font-size: 1.5rem;
+          width: 100%;
+          padding: 0.8rem;
+          // 🔥🔥🔥🔥🔥🔥🔥
+          font-size: 1.3rem;
         }
 
         .aboutBox {
-          // border: 3px solid blue;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding: 1.5rem 0;
-          width: 95%;
+          @include center;
+          flex-direction: row;
+          width: 100%;
+          padding: 0.8rem;
+          font-weight: bold;
 
           .price {
-            margin-right: 1.5rem;
-            font-weight: bold;
-            font-size: 1rem;
-            // font-size: 1.1rem;
+            margin: 0 1.5rem 0 0;
+            // 🔥🔥🔥🔥🔥🔥🔥
+            font-size: 0.9rem;
           }
 
           .product {
-            font-weight: bold;
-            font-size: 0.9rem;
             p {
               margin: 0;
+              // 🔥🔥🔥🔥🔥🔥🔥
+              font-size: 0.85rem;
             }
           }
         }
 
         .detail {
-          // border: 3px solid green;
-          width: 95%;
-          font-size: 15px;
+          width: 100%;
+          padding: 0.8rem;
           line-height: 1.8;
-          padding: 0 1rem;
 
           p {
             margin: 0;
+            // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
+            font-size: 0.9rem;
           }
         }
       }
 
-      .imageBox {
-        border: 3px solid green;
+      .image {
+        position: relative;
         width: 30%;
-        display: flex;
-        justify-content: center;
-
-        .image {
-          // border: 3px solid orange;
-          width: 300px;
-          height: 350px;
-          position: relative;
-        }
+        height: 300px;
       }
     }
-  }
 
-  .button {
-    margin-top: 3rem;
+    .buttonBox {
+      width: 70%;
+      margin-top: 2rem;
+      @include center;
+      color: white;
+      z-index: 1;
 
-    ul {
-      padding: 0rem;
-      margin: 0;
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      li:nth-child(2) {
-        margin-right: 0;
-      }
-
-      li {
-        border: 1px solid black;
-        display: flex;
-        margin-right: 2rem;
-        cursor: pointer;
-        border-radius: 5px;
-        font-weight: bold;
-
-        &:hover {
-          background-color: black;
-          color: white;
-          transition: 300ms;
-        }
-
-        a {
-          padding: 1rem;
-        }
+      a {
+        color: white;
+        z-index: 1;
+        padding: 1rem 2rem;
       }
     }
   }
@@ -162,87 +144,51 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
   .body {
     main {
       .box {
-        width: 800px;
+        // background-color: pink;
+        width: 75%;
       }
     }
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   .body {
     main {
       .box {
-        border: 3px solid red;
+        // background-color: skyblue;
         width: 90%;
-        flex-direction: column;
 
         .sentence {
-          border: 3px solid blue;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-          width: 100%;
-          padding: 1.5rem;
-          // padding: 1.5rem 1.5rem 0;
-
           .title {
-            margin: 0;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
           }
 
           .aboutBox {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 1rem 0;
-            width: 100%;
-
             .price {
-              margin-right: 1.5rem;
-              font-weight: bold;
-              font-size: 1rem;
+              font-size: 0.85rem;
             }
 
             .product {
-              font-weight: bold;
-              font-size: 0.9rem;
               p {
-                margin: 0;
+                font-size: 0.8rem;
               }
             }
           }
 
           .detail {
-            width: 100%;
-            font-size: 14px;
-            line-height: 1.8;
-            padding: 0;
-
             p {
-              margin: 0;
+              // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
+              font-size: 0.9rem;
             }
           }
         }
-
-        .imageBox {
-          border: 3px solid green;
-          width: 100%;
-
-          .image {
-            border: 3px solid orange;
-            width: 300px;
-            height: 200px;
-            position: relative;
-          }
+        .image {
+          width: 30%;
+          height: 280px;
         }
       }
     }
@@ -253,171 +199,189 @@
   .body {
     main {
       .box {
-        border: 3px solid red;
-        width: 90%;
+        // background-color: greenyellow;
+        width: 100%;
         flex-direction: column;
 
         .sentence {
-          border: 3px solid blue;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
           width: 100%;
-          padding: 1.5rem;
-          // padding: 1.5rem 1.5rem 0;
-
           .title {
             font-size: 1.3rem;
           }
 
           .aboutBox {
-            padding: 1rem 0;
-            width: 100%;
-
             .price {
-              margin-right: 1.5rem;
               font-size: 0.9rem;
             }
 
             .product {
-              font-size: 0.8rem;
+              p {
+                font-size: 0.85rem;
+              }
             }
           }
 
           .detail {
-            width: 100%;
-            font-size: 13px;
-            line-height: 1.8;
-            padding: 0;
-
             p {
-              margin: 0;
+              // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
+              font-size: 0.9rem;
             }
           }
+        }
+        .image {
+          width: 100%;
+          height: 200px;
+          // height: 280px;
         }
       }
     }
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 550px) {
   .body {
     main {
+      padding: 3rem 2.5rem;
+      // padding: 3rem;
       .box {
-        border: 3px solid red;
+        // background-color: gold;
         width: 100%;
-        // width: 90%;
         flex-direction: column;
 
         .sentence {
-          border: 3px solid blue;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
           width: 100%;
-          padding: 1.5rem;
-          // padding: 1.5rem 1.5rem 0;
-
           .title {
             font-size: 1.3rem;
+            // font-size: 1.2rem;
           }
 
           .aboutBox {
-            // border: 3px solid blue;
-            flex-direction: column;
-            padding: 1rem;
-
             .price {
-              // border: 3px solid green;
-              margin-right: 0rem;
-
-              margin: 0;
-              font-size: 0.9rem;
+              font-size: 0.8rem;
+              // font-size: 0.75rem;
             }
 
             .product {
-              // border: 3px solid orange;
-              margin-top: 1rem;
-              font-size: 0.8rem;
+              p {
+                font-size: 0.8rem;
+                // font-size: 0.75rem;
+              }
             }
           }
 
           .detail {
-            width: 100%;
-            font-size: 13px;
-            line-height: 1.8;
-            padding: 0;
-
             p {
-              margin: 0;
+              // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
+              font-size: 0.8rem;
+              // font-size: 0.9rem;
             }
           }
+        }
+        .image {
+          width: 100%;
+          height: 200px;
         }
       }
     }
   }
 }
+
 @media screen and (max-width: 480px) {
   .body {
-    position: relative;
     top: 100px;
-
     main {
-      padding: 1rem;
+      padding: 3rem 1.8rem;
+      // padding: 3rem 2.5rem;
 
       .box {
-        border: 3px solid red;
         width: 100%;
-        // width: 90%;
         flex-direction: column;
+        padding: 0.5rem;
+
+        // padding: 1rem;
 
         .sentence {
-          border: 3px solid blue;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
           width: 100%;
-          padding: 1.5rem;
-          // padding: 1.5rem 1.5rem 0;
-
           .title {
-            font-size: 1.1rem;
+            font-size: 1rem;
+            padding: 0.5rem;
             // font-size: 1.3rem;
           }
 
           .aboutBox {
-            // border: 3px solid blue;
-            flex-direction: column;
-            padding: 1rem;
-
+            padding: 0.5rem;
             .price {
-              // border: 3px solid green;
-              margin-right: 0rem;
-
-              margin: 0;
-              font-size: 0.9rem;
+              font-size: 0.7rem;
+              // font-size: 0.8rem;
             }
 
             .product {
-              // border: 3px solid orange;
-              margin-top: 1rem;
-              font-size: 0.8rem;
+              p {
+                font-size: 0.7rem;
+                // font-size: 0.8rem;
+              }
             }
           }
 
           .detail {
-            width: 100%;
-            font-size: 13px;
-            line-height: 1.8;
-            padding: 0;
-
+            padding: 0.5rem;
             p {
-              margin: 0;
+              // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
+              font-size: 0.8rem;
             }
           }
+        }
+        .image {
+          width: 100%;
+          height: 200px;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 390px) {
+  .body {
+    top: 100px;
+    main {
+      padding: 3rem 1.8rem;
+
+      .box {
+        width: 100%;
+        flex-direction: column;
+        padding: 0.5rem;
+
+        .sentence {
+          width: 100%;
+          .title {
+            font-size: 1rem;
+            padding: 0.5rem;
+          }
+
+          .aboutBox {
+            padding: 0.5rem;
+            .price {
+              font-size: 0.6rem;
+              margin: 0 1rem 0 0;
+            }
+
+            .product {
+              p {
+                font-size: 0.6rem;
+              }
+            }
+          }
+
+          .detail {
+            padding: 0.5rem;
+            p {
+              // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
+              font-size: 0.7rem;
+            }
+          }
+        }
+        .image {
+          width: 100%;
+          height: 200px;
         }
       }
     }
