--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -4,6 +4,16 @@
   align-items: center;
 }
 
+@mixin grid {
+  display: grid;
+  grid-template:
+    "title"
+    "product"
+    "about"
+    "image"
+    / 1fr;
+}
+
 .body {
   position: relative;
   top: 130px;
@@ -48,14 +58,13 @@
     flex-direction: column;
 
     .box {
+      @include center;
       z-index: 1;
       background-color: white;
       box-shadow: 5px 5px 10px gray;
       border-radius: 10px;
       padding: 1rem;
       width: 65%;
-
-      @include center;
 
       .sentence {
         width: 70%;
@@ -81,6 +90,7 @@
 
           .price {
             margin: 0 1.5rem 0 0;
+
             // 🔥🔥🔥🔥🔥🔥🔥
             font-size: 0.9rem;
           }
@@ -115,16 +125,37 @@
     }
 
     .buttonBox {
-      width: 70%;
+      // border: 3px solid red;
+      width: 65%;
       margin-top: 2rem;
       @include center;
       color: white;
       z-index: 1;
 
+      a:nth-child(2) {
+        margin: 0;
+      }
+
       a {
+        @include center;
+        border: 1px solid white;
         color: white;
         z-index: 1;
         padding: 1rem 2rem;
+        margin: 0 2rem 0 0;
+        font-weight: bold;
+        border-radius: 10px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: white;
+          color: black;
+          transition: 300ms;
+        }
+
+        .icon {
+          margin: 0 1rem 0 0;
+        }
       }
     }
   }
@@ -146,9 +177,16 @@
 
 @media screen and (max-width: 1100px) {
   .body {
+    .pageTitle {
+      h1 {
+        font-size: 1.8rem;
+      }
+    }
     main {
       .box {
-        // background-color: pink;
+        width: 75%;
+      }
+      .buttonBox {
         width: 75%;
       }
     }
@@ -159,7 +197,6 @@
   .body {
     main {
       .box {
-        // background-color: skyblue;
         width: 90%;
 
         .sentence {
@@ -191,25 +228,37 @@
           height: 280px;
         }
       }
+      .buttonBox {
+        width: 90%;
+      }
     }
   }
 }
 
 @media screen and (max-width: 768px) {
   .body {
+    .pageTitle {
+      h1 {
+        font-size: 1.7rem;
+      }
+    }
     main {
       .box {
-        // background-color: greenyellow;
         width: 100%;
         flex-direction: column;
 
         .sentence {
+          @include grid;
           width: 100%;
+
           .title {
+            grid-area: title;
+
             font-size: 1.3rem;
           }
 
           .aboutBox {
+            grid-area: product;
             .price {
               font-size: 0.9rem;
             }
@@ -222,6 +271,7 @@
           }
 
           .detail {
+            grid-area: about;
             p {
               // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
               font-size: 0.9rem;
@@ -229,9 +279,17 @@
           }
         }
         .image {
+          grid-area: image;
           width: 100%;
           height: 200px;
-          // height: 280px;
+        }
+      }
+
+      .buttonBox {
+        width: 100%;
+
+        a {
+          padding: 0.8rem 1.5rem;
         }
       }
     }
@@ -242,29 +300,27 @@
   .body {
     main {
       padding: 3rem 2.5rem;
-      // padding: 3rem;
+
       .box {
-        // background-color: gold;
         width: 100%;
         flex-direction: column;
+        padding: 1rem;
+        padding: 0.5rem;
 
         .sentence {
           width: 100%;
           .title {
             font-size: 1.3rem;
-            // font-size: 1.2rem;
           }
 
           .aboutBox {
             .price {
               font-size: 0.8rem;
-              // font-size: 0.75rem;
             }
 
             .product {
               p {
                 font-size: 0.8rem;
-                // font-size: 0.75rem;
               }
             }
           }
@@ -273,7 +329,6 @@
             p {
               // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
               font-size: 0.8rem;
-              // font-size: 0.9rem;
             }
           }
         }
@@ -289,36 +344,40 @@
 @media screen and (max-width: 480px) {
   .body {
     top: 100px;
+    .pageTitle {
+      h1 {
+        font-size: 1.6rem;
+      }
+    }
     main {
-      padding: 3rem 1.8rem;
-      // padding: 3rem 2.5rem;
+      padding: 3rem 2rem;
 
       .box {
+        background-color: pink;
         width: 100%;
         flex-direction: column;
         padding: 0.5rem;
 
-        // padding: 1rem;
-
         .sentence {
           width: 100%;
           .title {
-            font-size: 1rem;
-            padding: 0.5rem;
-            // font-size: 1.3rem;
+            font-size: 1.2rem;
+
+            padding: 0.5rem 0;
           }
 
           .aboutBox {
+            flex-direction: column;
             padding: 0.5rem;
+
             .price {
-              font-size: 0.7rem;
-              // font-size: 0.8rem;
+              font-size: 0.9rem;
+              margin: 0 0 1rem;
             }
 
             .product {
               p {
-                font-size: 0.7rem;
-                // font-size: 0.8rem;
+                font-size: 0.8rem;
               }
             }
           }
@@ -336,16 +395,30 @@
           height: 200px;
         }
       }
+      .buttonBox {
+        width: 100%;
+
+        a {
+          padding: 0.8rem 1rem;
+          font-size: 0.9rem;
+        }
+      }
     }
   }
 }
 @media screen and (max-width: 390px) {
   .body {
     top: 100px;
+    .pageTitle {
+      h1 {
+        font-size: 1.5rem;
+      }
+    }
     main {
-      padding: 3rem 1.8rem;
+      padding: 3rem 2rem;
 
       .box {
+        background-color: skyblue;
         width: 100%;
         flex-direction: column;
         padding: 0.5rem;
@@ -354,19 +427,22 @@
           width: 100%;
           .title {
             font-size: 1rem;
-            padding: 0.5rem;
+
+            padding: 0.5rem 0;
           }
 
           .aboutBox {
+            flex-direction: column;
             padding: 0.5rem;
+
             .price {
-              font-size: 0.6rem;
-              margin: 0 1rem 0 0;
+              font-size: 0.8rem;
+              margin: 0 0 1rem;
             }
 
             .product {
               p {
-                font-size: 0.6rem;
+                font-size: 0.7rem;
               }
             }
           }
@@ -375,7 +451,7 @@
             padding: 0.5rem;
             p {
               // ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️
-              font-size: 0.7rem;
+              font-size: 0.8rem;
             }
           }
         }
