--- a/styles/all-menu.module.css
+++ b/styles/all-menu.module.css
@@ -78,6 +78,7 @@
   width: 100%;
   height: 20px;
   font-size: 15px;
+  font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -203,6 +204,7 @@
   width: 100%;
   height: 20px;
   font-size: 15px;
+  font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -328,6 +330,7 @@
   width: 100%;
   height: 20px;
   font-size: 15px;
+  font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
