--- a/styles/all-menu.module.scss
+++ b/styles/all-menu.module.scss
@@ -70,11 +70,12 @@
           justify-content: center;
           align-items: center;
         }
-
+        
         .price {
           width: 100%;
           height: 20px;
           font-size: 15px;
+          font-weight: bold;
           display: flex;
           justify-content: center;
           align-items: center;
