--- a/components/Menu-Nav/menu-nav.module.scss
+++ b/components/Menu-Nav/menu-nav.module.scss
@@ -204,6 +204,8 @@
 @media screen and (max-width: 480px) {
   .body {
     height: 130px;
+    // background-color: black;
+    // color: white;
     main {
       padding: 0;
       flex-direction: column;
