--- a/styles/all-menu.module.scss
+++ b/styles/all-menu.module.scss
@@ -29,7 +29,8 @@
 
     &::after {
       content: "";
-      background-color: rgba(0, 0, 0, 0.5);
+      // background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0, 0, 0, 0.4);
       position: absolute;
       left: 0;
       right: 0;
@@ -70,7 +71,7 @@
           justify-content: center;
           align-items: center;
         }
-        
+
         .price {
           width: 100%;
           height: 20px;
@@ -173,7 +174,7 @@
     grid-area: bottle;
     @include parts;
     .menuSection {
-      background-image: url("/image/all-menu/bottle03.jpg");
+      background-image: url("/image/all-menu/bottle.jpg");
     }
   }
 
