--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -323,7 +323,8 @@
       }
 
       h1 {
-        font-size: 1.7rem;
+        font-size: 1.8rem;
+        margin-left: 0rem;
       }
     }
 
@@ -383,7 +384,7 @@
 
     .pageTitleCocktail {
       h1 {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
       }
     }
     main {
@@ -455,7 +456,7 @@
 
     .pageTitleCocktail {
       h1 {
-        font-size: 1.3em;
+        font-size: 1.45rem;
       }
     }
     main {
@@ -517,7 +518,7 @@
 
     .pageTitleCocktail {
       h1 {
-        font-size: 1.1em;
+        font-size: 1.2em;
       }
     }
   }
